[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/City-LevelSelect.gd" type="Script" id=1]

[node name="City-LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level 1" type="Button" parent="."]
margin_left = 212.187
margin_top = 74.8374
margin_right = 307.187
margin_bottom = 107.837
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level 2" type="Button" parent="."]
margin_left = 212.187
margin_top = 171.837
margin_right = 307.187
margin_bottom = 204.837
text = "Level 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level 3" type="Button" parent="."]
margin_left = 212.187
margin_top = 276.837
margin_right = 307.187
margin_bottom = 309.837
text = "Level 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level 4" type="Button" parent="."]
margin_left = 212.187
margin_top = 388.837
margin_right = 307.187
margin_bottom = 421.837
text = "Level 4"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Level 1" to="." method="_on_Level_1_pressed"]
[connection signal="pressed" from="Level 2" to="." method="_on_Level_2_pressed"]
[connection signal="pressed" from="Level 3" to="." method="_on_Level_3_pressed"]
[connection signal="pressed" from="Level 4" to="." method="_on_Level_4_pressed"]
